--- a/html/01_escape_characters.html
+++ b/html/01_escape_characters.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>JS6_01EscapeCharacters</title>
   <link href="/css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
